package main.java.com.team1.model;

public class LegalPerson {
}
