package main.java.com.team1.service;

public class VehicleService {
}
