@startuml
class Vehicle {
    -String id
    -String placa
    -String modelo
    -String marca
    -int ano
    -boolean disponivel
    -double precoDiaria
    +getters e setters
}
class Car
class Motorcycle
class Truck
class Agency {
    -String id
    -String nome
    -String endereco
    +getters e setters
}
class Customer {
    -String nome
    -String endereco
    -String telefone
    +getters e setters
    +getTipoCliente() String
}
class PhysicalPerson
class LegalPerson {
    -String cnpj
    +getters e setters
    +getTipoCliente() String
}
class Rental {
    -String id
    -Date dataInicio
    -Date dataFim
    -double valorTotal
    +getters e setters
}
class VehicleDAO
class AgencyDAO
class CustomerDAO
class RentalDAO
class VehicleService {
    +addVehicle(Vehicle vehicle)
    +getAllVehicles()
    +searchVehicleByName(String name)
    +getVehicleByPage(int pageNumber)
}
class AgencyService {
    +addAgency(Agency agency)
    +getAllAgencies()
    +searchAgencyByName(String name)
    +getAgencyByPage(int pageNumber)
}
class CustomerService {
    +addCustomer(Customer customer)
    +getAllCustomers()
    +searchCustomerByName(String name)
    +getCustomerByPage(int pageNumber)
}
class RentalService {
    +addRental(Rental rental)
    +getAllRentals()
    +searchRentalByName(String name)
    +getRentalByPage(int pageNumber)
}

Vehicle <|-- Car
Vehicle <|-- Motorcycle
Vehicle <|-- Truck
Customer <|-- PhysicalPerson
Customer <|-- LegalPerson
DataAccessObject <|.. VehicleDAO
DataAccessObject <|.. AgencyDAO
DataAccessObject <|.. CustomerDAO
DataAccessObject <|.. RentalDAO
Rental "1" -- "1" Vehicle
Rental "1" -- "1" Agency
Rental "1" -- "1" Customer

note "Tipos de veículos que serão considerados: Carro, Moto, Caminhões.\nOs veículos que estiverem alugados não poderão estar disponíveis." as N1
Vehicle .. N1

note "Agências não podem estar duplicadas." as N2
Agency .. N2

note "Clientes não podem estar duplicados." as N3
Customer .. N3

note "Os aluguéis e devoluções terão o local, data e horario.\nRegras de devolução:\n- Caso pessoa física tenha ficado com o carro mais que 5 dias terá direito a 5% de desconto.\n- Caso pessoa jurídica tenha ficado com o carro mais que 3 dias terá direito a 10% de desconto.\nValores base da diária por tipo de veículo:\n- Moto: R$ 100.00\n- Carro: R$ 150.00\n- Caminhão: R$ 200.00" as N4
Rental .. N4

note "Os veículos não podem ser repetidos." as N5
VehicleDAO .. N5

note "Agências não podem estar duplicadas." as N6
AgencyDAO .. N6

note "Clientes não podem estar duplicados." as N7
CustomerDAO .. N7

note "Os aluguéis e devoluções terão o local, data e horario." as N8
RentalDAO .. N8
@enduml
